# planilha-notas-alunos-ia

./: .env.evolution  .env.evolution-lite  .env.evolution-lite.example  .env.evolution.example  .env.example  .gitignore  Dockerfile  README.md  TEST-GUIA.md  alembic.ini  docker-compose.evolution-lite.yml  docker-compose.evolution.yml  eslint.config.cjs  package-lock.json  package.json  pyproject.toml  railway.toml  run-backend-only.sh  run-frontend-only.sh  setup-test-env.sh  start-dev.sh  test-auth.sh  tsconfig.typecheck.json
.aiox-core/: core-config.yaml  install-manifest.yaml  version.json
.aiox-core/data/: entity-registry.yaml
.claude/: settings.json
backend/: __init__.py  init_db.py  package.json
backend/app/: cli.py  config.py  database.py  main.py
backend/migrations/: env.py  script.py.mako
backend/tests/: conftest.py  test_academic_provisioning.py  test_ai_chatbot.py  test_app.py  test_auth.py  test_chatbot_pipeline.py  test_chatbot_test_endpoint.py  test_chatbot_webhook.py  test_cli.py  test_contexts.py  test_cutover_regression.py  test_ingest.py  test_normalized_flow.py  test_phone_normalization.py  (+4 more)
client/: components.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
data/: grades-last-upload.json  match-last.json  students.json
docs/: architecture.md  prd.md  sprint-fixes-ux.md
outputs/: AUDITORIA-UX.md
public/: PLANO DO PROJECTO - Grupo 3.xlsx  app.js  index.html  styles.css
src/: app.js  server.js
tests/: accessibility.test.js  critical-flow.test.js  form-validation.test.js
(+318 files in other folders)
