[project]
name = "planilha-notas-alunos-backend"
version = "0.1.0"
description = "FastAPI backend foundation for the local academic platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "anthropic>=0.28,<1",
  "argon2-cffi>=23,<25",
  "fastapi>=0.115,<1",
  "openai>=1.42,<2",
  "pydantic>=2,<3",
  "sqlalchemy>=2,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
exclude = ["backend/migrations/"]

